--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@akarui/aoi.invite": "github:aoijs/aoi.invite",
     "@aoijs/aoi.music": "^1.0.1",
     "aoi.js": "github:aoijs/aoi.js",
+    "ffmpeg-static": "^5.2.0",
     "formidable": "^3.5.1",
     "npm": "^10.8.2",
     "superagent": "^9.0.2",
