--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "StarBOT Evolution Project.",
   "dependencies": {
+    "@akarui/aoi.invite": "github:aoijs/aoi.invite",
+    "@aoijs/aoi.canvas": "^2.0.0",
     "@aoijs/aoi.music": "^1.1.1",
+    "@discordjs/opus": "^0.9.0",
     "aoi.js": "github:aoijs/aoi.js",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "formidable": "^3.5.1",
     "npm": "^10.8.2",
