--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "container",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,11 +11,11 @@
   "description": "",
   "dependencies": {
     "@aoijs/aoi.db": "^0.0.0",
-    "@aoijs/aoi.invite": "github:Asayukiii/aoi.invite",
+    "@aoijs/aoi.invite": "github:Asayukiii/aoi.invite#asayukiii-rewrite",
     "@aoijs/aoi.music": "^1.2.1",
     "@discordjs/opus": "^0.9.0",
     "aoi.canvas": "github:aoijs/aoi.canvas",
-    "aoi.js": "github:aoijs/aoi.js",
+    "aoi.js": "github:aoijs/aoi.js#bump-djs",
     "axios": "^1.7.5",
     "ffmpeg-static": "^5.2.0",
     "npm": "^10.8.3",
