--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@aoijs/aoi.db": "^0.0.0",
     "@aoijs/aoi.invite": "github:Asayukiii/aoi.invite#asayukiii-rewrite",
-    "@aoijs/aoi.music": "^1.2.1",
+    "@aoijs/aoi.music": "^1.2.2",
     "@discordjs/opus": "^0.9.0",
-    "aoi.canvas": "github:aoijs/aoi.canvas",
+    "aoi.canvas": "^3.0.8",
     "aoi.js": "github:aoijs/aoi.js#bump-djs",
     "axios": "^1.7.5",
     "ffmpeg-static": "^5.2.0",
