--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@aoijs/aoi.music": "^1.2.2",
     "@discordjs/opus": "^0.9.0",
     "aoi.canvas": "^3.0.8",
-    "aoi.js": "github:aoijs/aoi.js#bump-djs",
+    "aoi.js": "github:aoijs/aoi.js#fix-event",
     "axios": "^1.7.5",
     "ffmpeg-static": "^5.2.0",
     "npm": "^10.8.3",
