--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aoijs/aoi.db": "^0.0.0",
     "@aoijs/aoi.invite": "github:Asayukiii/aoi.invite#asayukiii-rewrite",
     "@aoijs/aoi.music": "^1.2.2",
     "@discordjs/opus": "^0.9.0",
     "aoi.canvas": "^3.0.8",
     "aoi.js": "github:aoijs/aoi.js#fix-event",
-    "axios": "^1.7.5",
+    "aoi.sqlite": "github:faf4a/aoi.sqlite",
+    "axios": "^1.7.7",
     "ffmpeg-static": "^5.2.0",
     "npm": "^10.8.3",
     "npm-check-updates": "^17.1.0"
