--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "description": "",
   "dependencies": {
     "@aoijs/aoi.invite": "github:Asayukiii/aoi.invite#asayukiii-rewrite",
-    "@aoijs/aoi.music": "^1.2.2",
+    "@aoijs/aoi.music": "^1.2.4",
     "@discordjs/opus": "^0.9.0",
     "aoi.canvas": "^3.0.8",
-    "aoi.js": "github:aoijs/aoi.js#fix-event",
+    "aoi.js": "github:aoijs/aoi.js#features",
     "aoi.sqlite": "github:faf4a/aoi.sqlite",
     "axios": "^1.7.7",
     "ffmpeg-static": "^5.2.0",
